<resources>
    <string name="app_name">QuoTable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quote">Quote</string>
    <string name="book">Book (OPTIONAL)</string>
    <string name="author">Author</string>
    <string name="next">Next</string>
    <string name="errorMessage">Error! Try again</string>
    <string name="comma">,</string>
    <string name="shareQuote">Share Quote</string>
    <string name="saveError">Saving problem!</string>
    <string name="manual">EDIT QUOTE MANUALLY</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="get_verify_code">Get Verify Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_out">Log Out</string>
    <string name="no_results">No results were found for your search crıterıa!</string>

</resources>