<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.zubeyirtaruz.quotable.viewmodel.QuoteViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".view.QuoteInfoFragment">

            <TextView
                android:id="@+id/titleQuote"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quote"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/quoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:counterEnabled="true"
                app:counterMaxLength="500"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/titleQuote">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/quoteEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@={viewModel.quote}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/titleAuthor"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/author"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quoteText" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/authorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/titleAuthor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/authorEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@={viewModel.author}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/titleBook"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/book"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorText" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bookText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/titleBook">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bookEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@={viewModel.book}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:text="@string/next"
                app:layout_constraintTop_toBottomOf="@id/bookText" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consLytBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/mainConstraintLayout"
                app:layout_constraintStart_toStartOf="@id/mainConstraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/nextButton">

                <!--Banner View that is defined at here is provided by HMS-->
                <com.huawei.hms.ads.banner.BannerView
                    android:id="@+id/bannerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>